SERVER-13875 Spec equivalence check ignore text/geo index versions

(cherry picked from commit 20e130aceda766c646d123d8a853ea5aabbeab26)